--- a/jaime-package/jaime.nuspec
+++ b/jaime-package/jaime.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>Jaime</id>
-    <title>Jaime</title>
+    <title>Jaime Application Launcher</title>
     <version>2.0.2</version>
     <authors>Leandro Simões</authors>
     <owners>Leandro Simões</owners>
@@ -13,6 +13,8 @@
     <licenseUrl>https://github.com/leandrosimoes/Jaime/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
     <iconUrl>https://raw.githubusercontent.com/leandrosimoes/Jaime/master/Jaime/Images/icon-jaime.png</iconUrl>
+    <packageSourceUrl>https://chocolatey.org/packages/Jaime</packageSourceUrl>
+    <releaseNotes>https://github.com/leandrosimoes/Jaime/releases</releaseNotes>
   </metadata>
   <files>
     <!-- this section controls what actually gets packaged into the Chocolatey package -->
